objects/CMPL123__WF_Rule_Phase__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Rule_Phase_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Rule Phase External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Phase</label>
        <referenceTo>CMPL123__WF_Phase__c</referenceTo>
        <relationshipLabel>Workflow Rule Phases</relationshipLabel>
        <relationshipName>Workflow_Rule_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Rule</label>
        <referenceTo>CMPL123__WF_Rule__c</referenceTo>
        <relationshipLabel>Workflow Rule Phases</relationshipLabel>
        <relationshipName>Workflow_Rule_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workflow Rule Phase</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WFRP-{000000}</displayFormat>
        <label>Workflow Rule Phase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Rule Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>